# pocketwalker

./: .gitignore  .gitmodules  README.md  build.sh
.github/workflows/: build-commit-windows.yml  build-release-windows.yml  build.yml
core/: CMakeLists.txt
core/cpu/: cpu.cpp  cpu.h  registers.cpp  registers.h
core/cpu/instructions/: instruction.h  set.cpp  set.h  table.cpp  table.h
core/memory/: interface.cpp  interface.h
core/pokewalker/: pocketwalker.cpp  pocketwalker.h
core/pokewalker/enhancements/: activity_timer_bypass.cpp  activity_timer_bypass.h
core/soc/: defines.h  h838606.cpp  h838606.h
core/soc/adc/: adc.cpp  adc.h
core/soc/interrupts/: interrupts.cpp  interrupts.h
core/soc/memory/: bus.cpp  bus.h
core/soc/rtc/: rtc.cpp
core/soc/sci3/: sci3.cpp  sci3.h
core/soc/ssu/: ssu.cpp  ssu.h
core/soc/timer/: timerb1.cpp  timerb1.h  timerw.cpp  (+1 more)
core/utils/: h8300h_ptr.h  logger.h
desktop/: CMakeLists.txt  CMakePresets.json  vcpkg.json
desktop/assets/: resources.qrc
desktop/src/: main.cpp
desktop/src/qt/: application_args.h
desktop/src/qt/audio/: qt_audio_system.cpp
desktop/src/qt/dialog/: about_dialog.cpp  about_dialog.h  control_settings_dialog.h  emulation_settings_dialog.cpp  emulation_settings_dialog.h  general_settings_dialog.h  ir_settings_dialog.cpp  set_session_steps_dialog.cpp  set_session_steps_dialog.h
desktop/src/qt/dialog/emulator/: set_watts_dialog.cpp  set_watts_dialog.h
desktop/src/qt/dialog/settings/: control_settings_dialog.cpp  control_settings_dialog.h  emulation_settings_dialog.cpp  emulation_settings_dialog.h  general_settings_dialog.cpp  ir_settings_dialog.cpp  ir_settings_dialog.h
desktop/src/qt/emulator/: emulator_context.cpp  emulator_context.h
desktop/src/qt/network/: qt_network_system.cpp  qt_network_system.h
desktop/src/qt/settings/: app_settings.cpp  app_settings.h
desktop/src/qt/settings/types/: control_settings.h  emulation_settings.h  general_settings.h  ir_settings.h
desktop/src/qt/widget/: display_widget.cpp  display_widget.h  key_bind_button.cpp  key_bind_button.h
desktop/src/qt/widget/keybind/: key_bind_button.cpp
desktop/src/qt/window/: qt_window_system.cpp  qt_window_system.h
desktop/src/qt/window/widgets/: display_widget.cpp
(+15 files in other folders)
